bugfix: fix demo for py